--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="two_player">Two Players</string>
     <string name="o_s_turn">O\'s Turn</string>
     <string name="x_s_turn">X\'s Turn</string>
+    <string name="start_game">Start Game</string>
+    <string name="player_2">Player 2 :</string>
+    <string name="player_1">Player 1 :</string>
 </resources>
